--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </header>
 
     <main>
-        <div class="about">
+        <!--section1 begin-->
+        <div class="about" data-aos="slide-up">
             <div class="container">
                 <div class="section1">
                     <div class="sect1-foto">
@@ -73,13 +74,49 @@
                     <div class="sect1-text">
                         <h3>About Us</h3>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                             when an unknown printer took a galley of type and scrambled it to make a type specimen book
+                            Geo Travel – is stable, progressively developing company. Our team consists of qualified advisers and managers having considerable experience of work. 
+                            Company Geo Travel is founded by professionals, 
+                            people who have devoted their life to tourism. Having a wide experience, Geo Travel manages tours in 45 countries of the world, realizes exclusive programs: 
+                            training and medical treatment abroad, exclusive participation in cultural and entertainment actions, organization of business trips and business seminars for experts of various branches.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+        <!--section1 end-->
+
+           <!--section2 begin-->
+           <div class="destination" data-aos="slide-up">
+                <div class="container">
+                    <div class="section2">
+                    
+                        <div class="sect2-text">
+                            <h3>DISCOVER A DESTINATION WITH A STORY TO TELL FROM INTRIGUING CITIES TO HIGH PASSES</h3>
+                            <p>
+                                At will of the customer Geo Travel can reserve any of thousand of the best hotels of the world, charter the yacht or private plane, rent prestigious limousine, comfortable country house, or ancient castle. 
+                                Geo Travel is a member of JATA (the Japanese Association of Travel Agents) and IATA (International Air Transport Asotiation).
+                                For FIT tourists: Specializing on organization of individual tours, we offer the travelers new possibility – not to bind themselves with frameworks of a group 
+                                trip, but to create and plan your own rest with comfortable conditions suitable for them. Intimate knowledge of features of 
+                                each country, received by managers during training and seminars, guarantees clients of Geo Travel high level of service.
+                            </p>
+                        </div>
+                        
+                        <div class="sect2-foto">
+                            <img src="img/section2-foto.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        <!--section2 end-->
+
+        <!--section3 begin-->
+            <div class="section3" data-aos="slide-up">
+                <div class="container">
+                    <h2>EXPLORE OUR TOP DESTINATIONS</h2>
+                </div>
+            </div>
+        <!--section3 end-->
     </main>
 
     <footer>
