--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="scroll-down">
 
                         <button>
-                            <a href="#"><i class="fas fa-arrow-circle-down"></i></a>
+                            <a href="#about"><i class="fas fa-arrow-circle-down"></i></a>
                         </button>
 
                     </div>
@@ -93,7 +93,7 @@
 
     <main>
         <!--section1 begin-->
-        <div class="about" data-aos="slide-up">
+        <div class="about" id="about" data-aos="slide-up">
             <div class="container">
                 <div class="bg-1">
                     <div class="section1">
@@ -464,17 +464,23 @@
 
                         </div>
                         <div class="subs-addr">
+
                             <h6>ADDRESS</h6>
                             <p>1A Yusif Safarov str., Baku, AZ 1025, Azerbaijan</p>
+
                         </div>
                         <div class="subs-numbers">
+
                             <a href="tel:994518778000">+994 51 877 80 00</a>
                             <a href="tel:994124087478">+994 12 408 74 78</a>
+
                         </div>
                         <div class="soc-net">
+
                             <a href="https://wa.me/994514400140" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
+
                         </div>
                     </div>
                 </div>
