Responsive design fully finished

--- a/index.html
+++ b/index.html
@@ -338,9 +338,7 @@
                                 program
                                 (working part and activities), delicious cuisine, beautiful places, the hotel was also
                                 excellent.
-                                Thank you for working together, we listened and heard each other when preparing the
-                                project
-                                is excellent result.
+                                Thank you for working together, we listened and heard each other.
                             </p>
                             <div class="card-foot">
                                 <h4>
