--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="icon" href="img/globe-favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="swiper.min.css">
     <link rel="stylesheet" href="style.css">
@@ -18,10 +19,6 @@
     <script src="swiper.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-
-
 
     <title>Geo Travel</title>
 
@@ -63,9 +60,20 @@
                                 <div class="menu-open">
                                     <span>MENU</span>
                                     <span>OPEN</span>
+                                    <span>CLOSE</span>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="show-menu">
+                        <div class="show-left">
+
+                        </div>
+                        <div class="show-right">
+
+                        </div>
+                        <div class="left-blur"></div>
+                        <div class="right-blur"></div>
                     </div>
                 </div>
             </div>
@@ -154,7 +162,7 @@
 
         <!-- ThumbSlider -->
 
-        <div class="section3">
+        <div class="section3" data-aos="slide-up">
             <h2>EXPLORE OUR TOP DESTINATIONS</h2>
             <div class="manshet_appartment">
                 <div class="swiper-container gallery-top">
