--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
 
 <body>
 
+    <div class="show-menu">
+        <div class="show-left">
+
+            <div>
+                <h1><a href="#">HOME PAGE</a></h1>
+            </div>
+            <div>
+                <h1><a href="#">DESTINATIONS</a></h1>
+            </div>
+            <div>
+                <h1><a href="#">CONTACT US</a></h1>
+            </div>
+
+        </div>
+        <div class="show-right">
+
+            <div class="subs-numbers">
+
+                <a href="tel:994518778000">+994 51 877 80 00</a>
+                <a href="tel:994124087478">+994 12 408 74 78</a>
+                <a href="mailto: info@geo-mice.az">info@geo-mice.az</a>
+
+            </div>
+
+            <div class="numb-socs">
+
+                <div class="subs-addr">
+
+                    <h6>ADDRESS</h6>
+                    <p>1A Yusif Safarov str., Baku, AZ 1025, Azerbaijan</p>
+
+                </div>
+
+                <div class="soc-net">
+
+                    <a href="https://wa.me/994514400140" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+
+                </div>
+
+            </div>
+
+        </div>
+        <!-- <div class="left-blur"></div>
+        <div class="right-blur"></div> -->
+    </div>
+
     <header>
 
         <div class="basliq-blur">
@@ -65,17 +113,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="show-menu">
-                        <div class="show-left">
 
-                        </div>
-                        <div class="show-right">
-
-                        </div>
-                        <div class="left-blur"></div>
-                        <div class="right-blur"></div>
-                    </div>
                 </div>
+
             </div>
 
             <div class="nav-bottom">
@@ -95,7 +135,11 @@
                 </div>
             </div>
 
+
+
         </div>
+
+
 
     </header>
 
