--- a/index.html
+++ b/index.html
@@ -6,37 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="icon" href="img/globe-favicon.png">
+    <link rel="icon" href="img/geo-travel-favicon.svg">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="swiper.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/> -->
-
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <!-- <script src="jquery-3.1.1.min.js"></script> -->
     <script src="swiper.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <title>Geo Travel</title>
-
 </head>
 
 <body>
 
     <div class="show-menu">
+
         <div class="show-left">
 
-            <div>
-                <h1><a href="#">HOME PAGE</a></h1>
+            <div class="langs">
+                <div><a href="#">EN</a></div>
+                <div><a href="#">GER</a></div>
+                <div><a href="#">RU</a></div>
             </div>
-            <div>
+
+            <div class="home-navi">
+                <h1><a href="index.html">HOME PAGE</a></h1>
+            </div>
+            <div class="navi-gators">
                 <h1><a href="#">DESTINATIONS</a></h1>
             </div>
-            <div>
+            <div class="navi-gators">
                 <h1><a href="#">CONTACT US</a></h1>
+            </div>
+
+            <div class="subs-numbers">
+                <a href="tel:994518778000">+994 51 877 80 00</a>
+                <a href="tel:994124087478">+994 12 408 74 78</a>
+                <a href="mailto: info@geo-mice.az">info@geo-mice.az</a>
+            </div>
+
+            <div class="subs-addr">
+
+                <h6>ADDRESS</h6>
+                <p>1A Yusif Safarov str., Baku, AZ 1025, Azerbaijan</p>
+
             </div>
 
         </div>
@@ -77,12 +94,13 @@
     <header>
 
         <div class="basliq-blur">
+
             <div class="nav-menu">
                 <div class="container">
                     <div class="logo">
                         <div class="foto">
-                            <img src="img/logo.png" alt="">
-                            <img src="img/logo-fixed.png" alt="">
+                            <img class="logo-normal" src="img/logo.png" alt="">
+                            <img class="logo-fixed" src="img/logo-fixed.png" alt="">
                         </div>
                         <div class="nav1">
                             <div class="lang-globe">
@@ -126,20 +144,14 @@
                         <h1>BACK to <br> NATURE</h1>
                     </div>
                     <div class="scroll-down">
-
                         <button>
                             <a href="#about"><i class="fas fa-arrow-circle-down"></i></a>
                         </button>
-
                     </div>
                 </div>
             </div>
 
-
-
         </div>
-
-
 
     </header>
 
@@ -203,9 +215,7 @@
         <!--section2 end-->
 
         <!--section3 begin-->
-
         <!-- ThumbSlider -->
-
         <div class="section3" data-aos="slide-up">
             <h2>EXPLORE OUR TOP DESTINATIONS</h2>
             <div class="manshet_appartment">
@@ -302,11 +312,7 @@
                 </div>
             </div>
         </div>
-
-
         <!--section3 end-->
-
-
 
         <!--section4 begin-->
         <div class="section4" data-aos="slide-up">
