destination page begin

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1><a href="index.html">HOME PAGE</a></h1>
             </div>
             <div class="navi-gators">
-                <h1><a href="#">DESTINATIONS</a></h1>
+                <h1><a href="destination.html">DESTINATIONS</a></h1>
             </div>
             <div class="navi-gators">
                 <h1><a href="#">CONTACT US</a></h1>
@@ -91,7 +91,7 @@
         <div class="right-blur"></div> -->
     </div>
 
-    <header>
+    <header class="header-home">
 
         <div class="basliq-blur">
 
@@ -156,6 +156,7 @@
     </header>
 
     <main>
+
         <!--section1 begin-->
         <div class="about" id="about" data-aos="slide-up">
             <div class="container">
