--- a/destination.html
+++ b/destination.html
@@ -141,8 +141,9 @@
     </header>
 
     <main>
+
         <!--section1 begin-->
-        <div class="destinations">
+        <div class="destinations" data-aos="slide-up">
             <div class="container">
                 <div class="destiny">
                     <div class="left-destiny">
@@ -173,7 +174,365 @@
                 </div>
             </div>
         </div>
+        <!--section1 end-->
+
+        <!--section2 begin-->
+        <div class="countries" data-aos="slide-up">
+            <div class="container">
+                <div class="country-selection">
+                    <div class="country-left">
+                        <div class="button-aze">
+                            <button>
+                                <!-- <input type="radio"> -->
+                                <img src="img/aze-flag.svg" alt="">
+                                AZERBAIJAN
+                            </button>
+                            <ul>
+                                <li>Baku</li>
+                                <li>Ganja</li>
+                                <li>Lankaran</li>
+                                <li>Qusar</li>
+                                <li>Qabala</li>
+                                <li>Shaki</li>
+                            </ul>
+                        </div>
+                        <div class="button-turk">
+                            <button>
+                                <img src="img/turk-flag.svg" alt="">
+                                TURKEY
+                            </button>
+                            <ul>
+                                <li>Izmir</li>
+                                <li>Antalya</li>
+                                <li>Cappadocia</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="country-text">
+                        <h3>WORK WITH PROFESSIONALS, FORGET THE RISKS!</h3>
+                        <p>
+                            Trace the history of mankind preserved in centuries-old petroglyphs, get dirty at the
+                            world-famous
+                            mud volcanoes in Gobustan and travel to the age of Zoroastrianism at Ateshgah Fire Temple.
+                            Escape
+                            the city buzz in the mountainous villages of Lahij and Khinalug, and follow the Silk Road to
+                            Sheki,
+                            a beautiful city reflecting the true character of local people. From contemporary art
+                            centers to the
+                            world's only petroleum spa, with unique traditions of carpet weaving, seasonal dishes,
+                            hospitable people
+                            and a rich cultural heritage woven into the mix, Azerbaijan tourism has all the ingredients
+                            necessary
+                            to transform your trip into the vacation of a lifetime
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--section2 end-->
+
+        <!--section3 begin-->
+        <div class="inspire" data-aos="slide-up">
+            <div class="container">
+                <h2>LET US INPIRE YOU</h2>
+                <div class="gallery-insp">
+
+                    <div>
+                        <img src="img/inspire-foto1.png" alt="" srcset="">
+                    </div>
+
+                    <div>
+                        <img src="img/inspire-foto2.png" alt="" srcset="">
+                    </div>
+
+                    <div>
+                        <img src="img/inspire-foto3.png" alt="" srcset="">
+                    </div>
+
+                    <div>
+                        <img src="img/inspire-foto4.png" alt="" srcset="">
+                    </div>
+
+                    <div>
+                        <img src="img/inspire-foto5.png" alt="" srcset="">
+                    </div>
+
+                    <div>
+                        <img src="img/inspire-foto6.png" alt="" srcset="">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section3 end-->
+
+        <!--section4 begin-->
+        <div class="accomodation" data-aos="slide-up">
+            <div class="container">
+                <div class="travel-place">
+                    <div class="travel-text">
+                        <h3>WE ARE HERE WITH HUNDREDS OF HOTELS FOR YOUR ACCOMMODATION NEEDS</h3>
+                        <p>
+                            Geo-Travel accommodation management is proud of working with the distinguished accommodation
+                            partners
+                            in the most important travel locations of Azerbaijan and Turkey, for your accommodation
+                            demands.
+                            Geo-Travel offers alternative hotel solutions suitable with the content, capacity, and
+                            budget of the needs of its customers.
+                            Understanding and directing the aim and objectives of coming together and managing the
+                            organization until the last smile. We work
+                            on innovative ideas to offer you the best accommodation options for your next program.
+                            Our goal is to ensure that you experience your theme in the best way and get maximum comfort
+                            and satisfaction, in your
+                            accommodations. Geo-Travel, with the personalized accommodation management approach, prepare
+                            a special accommodation plan for their guests and all they have to do is to enjoy it.
+                        </p>
+                    </div>
+                    <div class="travel-foto">
+                        <img src="img/section4-foto.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--section4 end-->
+
+        <!--section5 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+                    <div class="arriving-left">
+                        <img class="section6-foto" src="img/arrive-foto.jpg" alt="">
+                    </div>
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/arrive-right-blur.svg" alt="">
+                            </div>
+
+                            <h3> HOW WOULD YOU LIKE TO ARRIVE</h3>
+                        </div>
+
+                        <p>
+                            Geo-Travel offers a journey where luxury transport and delicately prepared travel
+                            experiences come together.
+                            From the moment of welcome to the end of the project, an experienced staff will be assigned
+                            to serve you.
+                            Our transfer team has been specially trained on customer relationships and driving
+                            techniques in accordance with international standards.
+                            Impartial and respectful treatment, privacy is very important for us. We work to ensure the
+                            most special transfer service and to
+                            provide the maximum comfort for you and your group in your experiences with luxury vehicles.
+                            Geo-Travel develops the best practices to realize it guests' transfers. It works with you
+                            from the day of arrival to ensure that
+                            your transportation plan is up-to-date, and not to reflect last-minute changes. In yo ur
+                            organizations, it carries out
+                            the transports with the participants' minimum waiting time, optimal driving experience and
+                            the best possible guidance.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--section5 end-->
+
+        <!--section6 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/section6-icon.svg" alt="">
+                            </div>
+
+                            <h3>AIRPORT TRANSFERS</h3>
+                        </div>
+
+                        <p>
+                            Geo-Travel is an expert in providing timely, reliable, cost-effective airport transportation
+                            plans to its guests with comfort guaranteed.
+                        </p>
+
+                    </div>
+
+                    <div class="arriving-left">
+                        <img src="img/section6-foto.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section6 end-->
+
+        <!--section7 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+
+                    <div class="arriving-left">
+                        <img src="img/section7-foto.jpg" alt="">
+                    </div>
+
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/section7-icon.svg" alt="">
+                            </div>
+
+                            <h3>PERSONALIZED WELCOME SERVICE</h3>
+                        </div>
+
+                        <p>
+                            The welcome services are designed and presented by Geo-Travel specially for your
+                            organization.
+                            In your airport welcoming, we support your meeting and event messages with the
+                            presentations, cocktails,
+                            welcoming area arrangements or a musical band, specially prepared for you. At the airport,
+                            our guests
+                            say hello with the unique welcome program of our staff, and they feel special with the
+                            colorful welcome in their hotel.
+                        </p>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section7 end-->
+
+        <!--section8 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/section8-icon.svg" alt="">
+                            </div>
+
+                            <h3>CONGRESSES</h3>
+                        </div>
+
+                        <p>
+                            Geo-Travel is an expert in providing timely, reliable, cost-effective airport transportation
+                            plans to its guests with comfort guaranteed.
+                        </p>
+
+                    </div>
+
+                    <div class="arriving-left">
+                        <img class="section8-foto" src="img/section8-foto.jpg" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section8 end-->
+
+        <!--section9 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+
+                    <div class="arriving-left">
+                        <img src="img/section9-foto.png" alt="">
+                    </div>
+
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/section7-icon.svg" alt="">
+                            </div>
+
+                            <h3>EVENTS</h3>
+                        </div>
+
+                        <p>
+                            Events give you the excellent opportunity to promote your company or products in totally
+                            pressure free environment.
+                            It is a very simple way to rise motivation in your team and reduce costs on promotion. We
+                            always crave to achieve
+                            the exact aims of your events. The main objective of Geo-Travel is to create events tailored
+                            to our customers’ needs.First, we help you to clarify your needs and objectives then we make
+                            sure that all the pieces fall into place from sourcing the venue to providing minute by
+                            minute itinerary for you.
+                        </p>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section9 end-->
+
+        <!--section10 begin-->
+        <div class="arrive" data-aos="slide-up">
+            <div class="container">
+                <div class="arriving">
+
+                    <div class="arriving-right">
+
+                        <div class="arrive-basliq">
+
+                            <div class="blue-blur"></div>
+
+                            <div>
+                                <img src="img/section10-icon.svg" alt="">
+                            </div>
+
+                            <h3>INCENTIVE TRAVEL</h3>
+                        </div>
+
+                        <p>
+                            Incentive travel is an important subset of the Meetings, Incentives, Conferences, and
+                            Exhibitions (MICE) industry.
+                            It is effectively a travel perk used to incentivize or motivate employees or partners. It is
+                            often tied to company goals or top performers.
+                            In this report from the University of Central Florida Rosen College of Hospitality
+                            Management, Goldblatt and Nelson define
+                            an incentive event as “a corporate sponsored meeting or trip to reward effort and create
+                            company loyalty, often built around a theme;
+                            and a celebratory event intended to showcase persons who meet or exceed sales or production
+                            goals.”
+                            However you define it, employee rewards are changing—gone are the days when holiday bonuses
+                            were enough
+                            to provide year-round motivation. Now, it’s all about non-monetary incentives, and the
+                            predictions for 2020 by the Incentive Revenue Foundation (IRF) support that idea.
+                        </p>
+
+                    </div>
+
+                    <div class="arriving-left">
+                        <img src="img/section10-foto.jpg" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--section10 end-->
+
     </main>
 
     <footer>
