country-selection added

--- a/destination.html
+++ b/destination.html
@@ -182,12 +182,12 @@
                 <div class="country-selection">
                     <div class="country-left">
                         <div class="button-aze">
-                            <button>
+                            <button class="azebtn" onclick="azebtn()">
                                 <!-- <input type="radio"> -->
                                 <img src="img/aze-flag.svg" alt="">
                                 AZERBAIJAN
                             </button>
-                            <ul>
+                            <ul class="aze-cities">
                                 <li>Baku</li>
                                 <li>Ganja</li>
                                 <li>Lankaran</li>
@@ -197,11 +197,11 @@
                             </ul>
                         </div>
                         <div class="button-turk">
-                            <button>
+                            <button class="turkbtn" onclick="turkbtn()">
                                 <img src="img/turk-flag.svg" alt="">
                                 TURKEY
                             </button>
-                            <ul>
+                            <ul class="turk-cities">
                                 <li>Izmir</li>
                                 <li>Antalya</li>
                                 <li>Cappadocia</li>
