fancybox effect added to section3 photo-gallery

--- a/destination.html
+++ b/destination.html
@@ -10,6 +10,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="swiper.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/> -->
@@ -238,27 +239,52 @@
                 <div class="gallery-insp">
 
                     <div>
-                        <img src="img/inspire-foto1.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/Fmzhsypgv6pgddDcOvp6.jpg"
+                            data-fancybox="group">
+
+                            <img src="http://geo-mice.az/storage/destinations/June2022/Fmzhsypgv6pgddDcOvp6.jpg" alt="">
+                            <!-- <img src="img/inspire-foto1.png" alt="" srcset=""> -->
+                        </a>
                     </div>
 
                     <div>
-                        <img src="img/inspire-foto2.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/Q012t0mNeFXFxcH3mhoD.jpg"
+                            data-fancybox="group">
+                            <img src="http://geo-mice.az/storage/destinations/June2022/Q012t0mNeFXFxcH3mhoD.jpg" alt="">
+                        </a>
+                        <!-- <img src="img/inspire-foto2.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
-                        <img src="img/inspire-foto3.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/j0iKTkBJS1fkEW1pjqPG.jpg"
+                            data-fancybox="group">
+                            <img src="http://geo-mice.az/storage/destinations/June2022/j0iKTkBJS1fkEW1pjqPG.jpg" alt="">
+                        </a>
+                        <!-- <img src="img/inspire-foto3.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
-                        <img src="img/inspire-foto4.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/Tkrue9ZpaK9fDYTV54mq.jpg"
+                            data-fancybox="group">
+                            <img src="http://geo-mice.az/storage/destinations/June2022/Tkrue9ZpaK9fDYTV54mq.jpg" alt="">
+                        </a>
+                        <!-- <img src="img/inspire-foto4.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
-                        <img src="img/inspire-foto5.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/dpKPenV4lFRg7ssh8QBu.jpg"
+                            data-fancybox="group">
+                            <img src="http://geo-mice.az/storage/destinations/June2022/dpKPenV4lFRg7ssh8QBu.jpg" alt="">
+                        </a>
+                        <!-- <img src="img/inspire-foto5.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
-                        <img src="img/inspire-foto6.png" alt="" srcset="">
+                        <a href="http://geo-mice.az/storage/destinations/June2022/SsWPdqrBjGAJW34GOjEk.jpg"
+                            data-fancybox="group">
+                            <img src="http://geo-mice.az/storage/destinations/June2022/SsWPdqrBjGAJW34GOjEk.jpg" alt="">
+                        </a>
+                        <!-- <img src="img/inspire-foto6.png" alt="" srcset=""> -->
                     </div>
 
                 </div>
@@ -602,6 +628,11 @@
     <script src="script.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+        integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
