section1 destiny-right designed

--- a/destination.html
+++ b/destination.html
@@ -144,9 +144,9 @@
     <main>
 
         <!--section1 begin-->
-        <div class="destinations" data-aos="slide-up">
+        <div class="destinations">
             <div class="container">
-                <div class="destiny">
+                <div class="destiny" data-aos="slide-up">
                     <div class="left-destiny">
                         <h3>DESTINATIONS</h3>
                         <p>
@@ -166,11 +166,56 @@
                     <div class="right-destiny">
                         <div class="foto1">
                             <img src="img/H-Merkez.png" alt="">
+                            <div class="merkez-text">
+                                <h4>AZERBAIJAN</h4>
+                                <h5>BAKU</h5>
+                            </div>
+                            <button class="button-prev">
+                                <i class="fas fa-arrow-left"></i>
+                            </button>
+
                         </div>
 
                         <div class="foto2">
                             <img src="img/desti-Cappadocia.png" alt="">
+                            <div class="cappa-text">
+                                <h4>TURKIYE</h4>
+                                <h3>CAPPADOCIA</h3>
+                            </div>
+                            <button class="button-next">
+                                <i class="fas fa-arrow-right"></i>
+                            </button>
                         </div>
+
+                        <!-- <div class="swiper-container gallery-thumbs">
+                            <div class="swiper-wrapper">
+
+                                <div class="swiper-slide">
+                                    <div class="sld_thumb_img">
+                                        <img src="img/H-Merkez.png" alt="" class="thumb_img" />
+                                    </div>
+                                    <div class="merkez-text">
+                                        <h4>AZERBAIJAN</h4>
+                                        <h3>BAKU</h3>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="sld_thumb_img">
+                                        <img src="img/desti-Cappadocia.png" alt="" class="thumb_img" id="cappadoc" />
+                                    </div>
+                                    <div class="cappa-text">
+                                        <h4>TURKIYE</h4>
+                                        <h3>CAPPADOCIA</h3>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="swiper-button-next swiper-button-white"><i class="fas fa-arrow-right"></i></div>
+                            <div class="swiper-button-prev swiper-button-white"><i class="fas fa-arrow-left"></i></div>
+
+                        </div> -->
+
                     </div>
                 </div>
             </div>
