destiny-right all effects finished

--- a/destination.html
+++ b/destination.html
@@ -164,7 +164,7 @@
                         </p>
                     </div>
                     <div class="right-destiny">
-                        <div class="foto1">
+                        <div class="foto1 aktiv">
                             <img src="img/H-Merkez.png" alt="">
                             <div class="merkez-text">
                                 <h4>AZERBAIJAN</h4>
@@ -173,7 +173,6 @@
                             <button class="button-prev">
                                 <i class="fas fa-arrow-left"></i>
                             </button>
-
                         </div>
 
                         <div class="foto2">
@@ -187,35 +186,6 @@
                             </button>
                         </div>
 
-                        <!-- <div class="swiper-container gallery-thumbs">
-                            <div class="swiper-wrapper">
-
-                                <div class="swiper-slide">
-                                    <div class="sld_thumb_img">
-                                        <img src="img/H-Merkez.png" alt="" class="thumb_img" />
-                                    </div>
-                                    <div class="merkez-text">
-                                        <h4>AZERBAIJAN</h4>
-                                        <h3>BAKU</h3>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="sld_thumb_img">
-                                        <img src="img/desti-Cappadocia.png" alt="" class="thumb_img" id="cappadoc" />
-                                    </div>
-                                    <div class="cappa-text">
-                                        <h4>TURKIYE</h4>
-                                        <h3>CAPPADOCIA</h3>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="swiper-button-next swiper-button-white"><i class="fas fa-arrow-right"></i></div>
-                            <div class="swiper-button-prev swiper-button-white"><i class="fas fa-arrow-left"></i></div>
-
-                        </div> -->
-
                     </div>
                 </div>
             </div>
@@ -228,7 +198,7 @@
                 <div class="country-selection">
                     <div class="country-left">
                         <div class="button-aze">
-                            <button class="azebtn" onclick="azebtn()">
+                            <button class="azebtn">
                                 <!-- <input type="radio"> -->
                                 <img src="img/aze-flag.svg" alt="">
                                 AZERBAIJAN
@@ -243,7 +213,7 @@
                             </ul>
                         </div>
                         <div class="button-turk">
-                            <button class="turkbtn" onclick="turkbtn()">
+                            <button class="turkbtn">
                                 <img src="img/turk-flag.svg" alt="">
                                 TURKEY
                             </button>
