--- a/destination.html
+++ b/destination.html
@@ -88,14 +88,10 @@
             </div>
 
         </div>
-        <!-- <div class="left-blur"></div>
-        <div class="right-blur"></div> -->
+   
     </div>
 
     <header class="header-destination">
-
-        <!-- <div class="basliq-blur"> -->
-
         <div class="nav-menu">
             <div class="container">
                 <div class="logo">
@@ -136,9 +132,6 @@
             </div>
 
         </div>
-
-        <!-- </div> -->
-
     </header>
 
     <main>
@@ -256,9 +249,7 @@
                     <div>
                         <a href="http://geo-mice.az/storage/destinations/June2022/Fmzhsypgv6pgddDcOvp6.jpg"
                             data-fancybox="group">
-
                             <img src="http://geo-mice.az/storage/destinations/June2022/Fmzhsypgv6pgddDcOvp6.jpg" alt="">
-                            <!-- <img src="img/inspire-foto1.png" alt="" srcset=""> -->
                         </a>
                     </div>
 
@@ -267,7 +258,6 @@
                             data-fancybox="group">
                             <img src="http://geo-mice.az/storage/destinations/June2022/Q012t0mNeFXFxcH3mhoD.jpg" alt="">
                         </a>
-                        <!-- <img src="img/inspire-foto2.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
@@ -275,7 +265,6 @@
                             data-fancybox="group">
                             <img src="http://geo-mice.az/storage/destinations/June2022/j0iKTkBJS1fkEW1pjqPG.jpg" alt="">
                         </a>
-                        <!-- <img src="img/inspire-foto3.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
@@ -283,7 +272,6 @@
                             data-fancybox="group">
                             <img src="http://geo-mice.az/storage/destinations/June2022/Tkrue9ZpaK9fDYTV54mq.jpg" alt="">
                         </a>
-                        <!-- <img src="img/inspire-foto4.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
@@ -291,7 +279,6 @@
                             data-fancybox="group">
                             <img src="http://geo-mice.az/storage/destinations/June2022/dpKPenV4lFRg7ssh8QBu.jpg" alt="">
                         </a>
-                        <!-- <img src="img/inspire-foto5.png" alt="" srcset=""> -->
                     </div>
 
                     <div>
@@ -299,7 +286,6 @@
                             data-fancybox="group">
                             <img src="http://geo-mice.az/storage/destinations/June2022/SsWPdqrBjGAJW34GOjEk.jpg" alt="">
                         </a>
-                        <!-- <img src="img/inspire-foto6.png" alt="" srcset=""> -->
                     </div>
 
                 </div>
@@ -340,7 +326,7 @@
         <!--section5 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-direct">
                     <div class="arriving-left">
                         <img class="section6-foto" src="img/arrive-foto.jpg" alt="">
                     </div>
@@ -383,7 +369,7 @@
         <!--section6 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-reverse">
 
                     <div class="arriving-right">
 
@@ -417,7 +403,7 @@
         <!--section7 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-direct">
 
                     <div class="arriving-left">
                         <img src="img/section7-foto.jpg" alt="">
@@ -457,7 +443,7 @@
         <!--section8 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-reverse">
 
                     <div class="arriving-right">
 
@@ -491,7 +477,7 @@
         <!--section9 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-direct">
 
                     <div class="arriving-left">
                         <img src="img/section9-foto.png" alt="">
@@ -531,7 +517,7 @@
         <!--section10 begin-->
         <div class="arrive" data-aos="slide-up">
             <div class="container">
-                <div class="arriving">
+                <div class="arriving" id="arrive-reverse">
 
                     <div class="arriving-right">
 
